objects/csfb__Conga_Email_Staging__c.object
<CustomObject>
    <description>*** THIS OBJECT IS DEPRECATED.  DO NOT USE ***</description>
    <fields>
        <fullName>csfb__HTMLBody__c</fullName>
        <label>HTML Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>csfb__Subject__c</fullName>
        <label>Subject</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>csfb__TextBody__c</fullName>
        <label>Text Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>csfb__WhatId__c</fullName>
        <label>WhatId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__WhoId__c</fullName>
        <label>WhoId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Conga Email Staging</label>
    <nameField>
        <displayFormat>CES-{00000000}</displayFormat>
        <label>Conga Email Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Email Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>